--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=
-spring.datasource.username= 
-spring.datasource.password= 
+spring.datasource.url=jdbc:postgresql://arjuna.db.elephantsql.com:5432/jnahepgd
+spring.datasource.username= jnahepgd
+spring.datasource.password= rnh_6YfabqLqIhRGqblWWl16I8WX759r
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
@@ -9,7 +9,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.date-format=dd-MM-yyyy
 
+logging.level.root=INFO
+logging.level.=INFO
+
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-
-
