update logging code comment

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,8 +9,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.date-format=dd-MM-yyyy
 
-logging.level.root=INFO
-logging.level.=INFO
+# logging.level.root=INFO
+# logging.level.org.springframework=ERROR
+# logging.level.org.hibernate=ERROR
 
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
