--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.impacthack</groupId>
 	<artifactId>scf</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>scf</name>
 	<description>Demo Project SCF</description>
 	<properties>
@@ -46,6 +47,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
