--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://arjuna.db.elephantsql.com:5432/jnahepgd
-spring.datasource.username= jnahepgd
-spring.datasource.password= rnh_6YfabqLqIhRGqblWWl16I8WX759r
+spring.datasource.url=${DB_URL:not set}
+spring.datasource.username=${DB_USERNAME:not set}
+spring.datasource.password=${DB_PASSWORD:not set}
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
@@ -9,9 +9,15 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.date-format=dd-MM-yyyy
 
+# Allow debugging
 # logging.level.root=INFO
 # logging.level.org.springframework=ERROR
 # logging.level.org.hibernate=ERROR
 
+# Limit file size
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+
+# Allow access to Lob Stream
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.datasource.hikari.auto-commit=false
