--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.7.1",
+    "shadcn-ui": "^0.2.1",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
